force-app/main/default/objects/Contact/fields/dumm__c.field-meta.xml
<CustomField>
    <fullName>dumm__c</fullName>
    <label>dumm</label>
    <length>12</length>
    <type>Text</type>
</CustomField>