force-app/main/default/objects/Contact/fields/dummy__c.field-meta.xml
<CustomField>
    <fullName>dummy__c</fullName>
    <label>dummy</label>
    <length>10</length>
    <type>Text</type>
</CustomField>