force-app/main/default/objects/Contact/fields/temp123__c.field-meta.xml
<CustomField>
    <fullName>temp123__c</fullName>
    <label>temp123</label>
    <length>12</length>
    <type>Text</type>
</CustomField>