force-app/main/default/objects/Contact/fields/temp1__c.field-meta.xml
<CustomField>
    <fullName>temp1__c</fullName>
    <label>temp1</label>
    <length>12</length>
    <type>Text</type>
</CustomField>