force-app/main/default/objects/Contact/fields/temp2__c.field-meta.xml
<CustomField>
    <fullName>temp2__c</fullName>
    <label>temp2</label>
    <length>12</length>
    <type>Text</type>
</CustomField>